tests/vdq-rta/should_fail/T23738_fail_wild.stderr

T23738_fail_wild.hs:10:10: error: [GHC-93411]
    • Illegal named wildcard in a required type argument: ‘_w’
    • In the expression: idv _w True
      In an equation for ‘rBool'’: rBool' = idv _w True
    Suggested fix: Use an anonymous wildcard ‘_’

T23738_fail_wild.hs:11:10: error: [GHC-93411]
    • Illegal named wildcard in a required type argument: ‘_w’
    • In the expression: idv _w 'x'
      In an equation for ‘rChar'’: rChar' = idv _w 'x'
    Suggested fix: Use an anonymous wildcard ‘_’

T23738_fail_wild.hs:13:15: error: [GHC-93411]
    • Illegal named wildcard in a required type argument: ‘_w’
    • In the expression: idv (Maybe _w) (Just True)
      In an equation for ‘rMaybeBool'’:
          rMaybeBool' = idv (Maybe _w) (Just True)
    Suggested fix: Use an anonymous wildcard ‘_’

T23738_fail_wild.hs:14:15: error: [GHC-93411]
    • Illegal named wildcard in a required type argument: ‘_w’
    • In the expression: idv (Maybe _w) (Just 'x')
      In an equation for ‘rMaybeChar'’:
          rMaybeChar' = idv (Maybe _w) (Just 'x')
    Suggested fix: Use an anonymous wildcard ‘_’
